--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.13.1",
     "iview": "^3.5.4",
     "sui-design": "^1.0.21",
+    "velocity-animate": "^1.5.2",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.1",
